<resources>
    <string name="app_name">Expenses tracker</string>
    <string name="login">LOGIN</string>
    <string name="name">NAME</string>
    <string name="todo">TODO</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_a_account_signup">Don\'t have a account? | SIGNUP</string>
    <string name="already_have_an_account_signin_here">Already have an account? signin here</string>
    <string name="registration">REGISTRATION</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">BACK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="income">Income</string>
    <string name="expense">expense</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
</resources>