<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backimg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/loginimage"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="80sp"
            android:textColor="#EFF3EF"
            android:gravity="center"
            android:layout_marginTop="130dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="7dp"
            />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="390dp"
            android:layout_marginStart="11dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="15"
            android:hint="@string/email"
            android:textSize="25sp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:textCursorDrawable="@drawable/customcursor"
            android:backgroundTint="@color/white"
            android:background="@drawable/customedittext"
            android:inputType="text"
            android:padding="7dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPasss"
            android:layout_width="390dp"
            android:layout_marginStart="11dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:textCursorDrawable="@drawable/customcursor"
            android:backgroundTint="@color/white"
            android:background="@drawable/customedittext"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:inputType="textPassword"
            android:padding="7dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#07500D"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:background="@drawable/customloginbutton"
            android:textColor="@color/white"
            android:padding="7dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_account_signup"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:padding="5dp"/>
    </LinearLayout>

</RelativeLayout>