<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrationbackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="222dp"

        android:orientation="vertical">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/baseline_lock_24"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/editEmailName"
            android:layout_width="390dp"
            android:layout_marginStart="11dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="15"
            android:hint="@string/email"
            android:textSize="25sp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:textCursorDrawable="@drawable/customcursor"
            android:backgroundTint="@color/white"
            android:background="@drawable/customedittext"
            android:inputType="text"
            android:padding="7dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/forgotbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:padding="12dp"
            android:backgroundTint="#024905"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:drawableStart="@drawable/baseline_lock_reset_24"

            android:background="@drawable/resetpassword"

            />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:backgroundTint="#024905"
            android:layout_gravity="center"

            android:background="@drawable/backbuttononforgotpass"
            android:drawableStart="@drawable/back"
            />












    </LinearLayout>

</ScrollView>